# shardmind

./: AGENTS.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
shared/schemas/: note.schema.json  paper_card.schema.json
src/shardmind/: bootstrap.py  cli.py  config.py  errors.py  obsidian_tags.py  paper_cards.py  schemas.py
src/shardmind/_bundled/: .gitignore  __init__.py
src/shardmind/index/: service.py
src/shardmind/mcp/: main.py  registry.py  tools.py
src/shardmind/vault/: markdown.py  service.py
tests/: test_cli.py  test_index.py  test_mcp.py  test_schema.py  test_vault.py
